[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/game/TravelGame/Rocket/Rocket/Rocket.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/game/TravelGame/Rocket/Fleet.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/game/TravelGame/Drone/Drone.tscn" type="PackedScene" id=3]

[node name="Fleet" type="Node2D"]
script = ExtResource( 2 )

[node name="PrimaryRocket" parent="." instance=ExtResource( 1 )]

[node name="SecondaryRocket" parent="." instance=ExtResource( 1 )]
position = Vector2( -154.476, 23.9497 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="Drone" parent="." instance=ExtResource( 3 )]

[node name="DroneDeployTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="DroneDeployTimer" to="." method="_on_DroneDeployTimer_timeout"]
